--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,11 +26,11 @@
                           y2="193.49992"
                           gradientUnits="userSpaceOnUse">
             <stop
-                  style="stop-color:#eeff00;"
+                  style="stop-color:#c12138;;"
                   offset="0"
                   id="stop876" />
             <stop
-                  style="stop-color:#ffffff;"
+                  style="stop-color:#14ce40;;;;"
                   offset="1"
                   id="stop878" />
           </linearGradient>
