--- a/src/main/resources/static/css/style_login.css
+++ b/src/main/resources/static/css/style_login.css
@@ -1,21 +1,21 @@
 @import url('https://rsms.me/inter/inter-ui.css');
 ::selection {
-  background: #2D2F36;
+  background: #7a3d70;;
 }
 ::-webkit-selection {
-  background: #2D2F36;
+  background: #7a3d70;;
 }
 ::-moz-selection {
-  background: #2D2F36;
+  background: #7a3d70;;
 }
 body {
-  background: #5DCEAF;
+  background: #4dd3c6;
   font-family: 'Inter UI', sans-serif;
   margin: 0;
   padding: 20px;
 }
 .page {
-  background: #5DCEAF;
+  background: #4dd3c6;
   display: flex;
   flex-direction: column;
   height: calc(100% - 40px);
@@ -70,7 +70,7 @@ body {
   margin: 40px;
 }
 .right {
-  background: #474A59;
+  background: #7a3d70;
   box-shadow: 0px 0px 40px 16px rgba(0,0,0,0.22);
   color: #F1F1F2;
   position: relative;
