--- a/src/main/resources/templates/Sidebar.html
+++ b/src/main/resources/templates/Sidebar.html
@@ -16,66 +16,98 @@
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 		<div class="one"></div>
 		<div class="two"></div>
 		<div class="three"></div>
 		<div class="four"></div>
+<div class="five"></div>
+
 	</div>
 	<nav>
 		<form class="form-navbar">
