--- a/src/main/resources/static/css/dash.css
+++ b/src/main/resources/static/css/dash.css
@@ -645,7 +645,8 @@ nav ul li:after {
 	color: rgb(70, 69, 69);
 	top:0;
 	left: 70px;
-	width: 150px; height: 100%;
+	width: 150px; 
+  height: 100%;
   opacity:.5;
   transform: perspective(400px) rotateY(90deg);
 	transform-origin: 0 100%;
