--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,11 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
-  <link rel="stylesheet" href="./css/style_login.css">
+  
+  <link rel="stylesheet" th:href="@{/css/source_style.css}">
+  
+  <link rel="stylesheet" th:href="@{/css/style_login.css}">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+  
 <div class="page">
   <div class="container">
     <div class="left">
